--- a/Project/index.css
+++ b/Project/index.css
@@ -995,6 +995,10 @@ video {
     padding-top: 2.5rem;
   }
 
+  .lg\:pt-20 {
+    padding-top: 5rem;
+  }
+
   .lg\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
